# cbr-custom--defensible-governance

./: README.md  pyproject.toml
.github/actions/update-cbr-content/: action.yml
.github/workflows/: ci-pipeline-update-image.yml  ci-pipeline__dev.yml
cbr__defensible_governance/custom/cbr_content/en/web-pages/ccl/: chat-bot.md
cbr__defensible_governance/custom/cbr_content/en/web-pages/defensible_governance/: index.md  install-instructions.md
cbr__defensible_governance/custom/cbr_content/en/web-site/: home-page.md  resources-1.md  resources-2.md
cbr__defensible_governance/custom/cbr_content/en/web-site/home-page/: card-1.md  card-2.md  layout.md  welcome.md
cbr__defensible_governance/custom/cbr_content/en/web-site/side-menu/: config.toml  content.md
cbr__defensible_governance/custom/cbr_website_beta/apps/templates/includes/: home.html  sidebar.html
deploy/docker/cbr__defensible_governance/: Dockerfile  docker-compose.yml  update-code.sh
deploy/lambda_shell/: test_lambda_shell__localhost.py
