[tool.poetry]
name        = "cbr__defensible_governance"
version     = "v0.1.12"
description = "CBR - Custom - Defensible Governance"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--defensible-governance"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom--defensible-governance"

[tool.poetry.dependencies]
python           = "^3.11"
cbr_website_beta = "*"
pytest = "^8.3.3"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
